--- a/02_Lancamento_Estragico/index.html
+++ b/02_Lancamento_Estragico/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -79,10 +79,10 @@
             </ul>
 
             <!-- Menu de hamburguer -->
-            <span id="burguer" class="material-symbols-outlined" onclick="click_menu()">menu</span>
-
-            <!-- Simbolo de fechar -->
-            <!-- <span id="fechar" class="material-symbols-outlined" onclick="click_menu()">close</span> -->
+            <!-- Manha -->
+            <!-- <span id="burguer" class="material-symbols-outlined" onclick="click_menu()">menu</span> -->
+            <!-- Tarde -->
+           <i id="burguer" class="fa-solid fa-bars" onclick="click_menu()"></i>
 
         </nav>
     </header>
